export const snapshot = {};

snapshot[`slugify_urls plugin 1`] = `3`;

snapshot[`slugify_urls plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      removeExtension: true,
    },
  ],
}
`;

snapshot[`slugify_urls plugin 3`] = `
[
]
`;

snapshot[`slugify_urls plugin 4`] = `
{
  content: "<p>Page 2</p>
",
  data: {
    content: "Page 2
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/chourizos-ao-vino/",
  },
  dest: {
    ext: ".html",
    path: "/chourizos-ao-vino/index",
  },
  src: {
    ext: ".md",
    path: "/Chourizos ao viño",
  },
}
`;

snapshot[`slugify_urls plugin 5`] = `
{
  content: "<p>Page 1</p>
",
  data: {
    content: "Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    ext: ".md",
    path: "/Page 1",
  },
}
`;

snapshot[`slugify_urls plugin 6`] = `
{
  content: "<p>Page 3</p>
",
  data: {
    content: "
Page 3
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/paxina-numero/tres/",
  },
  dest: {
    ext: ".html",
    path: "/paxina-numero/tres/index",
  },
  src: {
    ext: ".md",
    path: "/page-3",
  },
}
`;
